--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 Simple_Map/static/js/config.js
 Simple_Map/static/js/oldish and info.js
+Earthquake_Challenge/static/js/logic.js
+Earthquake_Challenge/static/js/config.js
+Earthquake_Challenge/favicon.ico
+Earthquake_Challenge/static/js/tectonic_plate_starter_logic_BKUP.js
+Earthquake_Challenge/static/js/logicStep5.js
+Earthquake_Challenge/static/js/logicStep4.js
+Earthquake_Challenge/static/js/logicStep3.js
+Earthquake_Challenge/static/js/logicStep2.js
+Earthquake_Challenge/static/js/logicStep1.js
+Earthquake_Challenge/static/js/major_eq_starter_logic.js
