--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Earthquake_Challenge/static/js/logicStep3.js
 Earthquake_Challenge/static/js/logicStep2.js
 Earthquake_Challenge/static/js/logicStep1.js
 Earthquake_Challenge/static/js/major_eq_starter_logic.js
+Earthquake_Challenge/static/js/major_eq_starter_logic_BKUP.js
