Adding code for resubmit adding Deliverable 2

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Earthquake_Challenge/static/js/logicStep2.js
 Earthquake_Challenge/static/js/logicStep1.js
 Earthquake_Challenge/static/js/major_eq_starter_logic.js
 Earthquake_Challenge/static/js/major_eq_starter_logic_BKUP.js
+Earthquake_Challenge - BKUP Copy
